# Adaptive-PI

./: .gitignore  ARTIFACTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cantor'sINfinities.md  LICENSE  Makefile  README.md  README_PHASE5_HARDY.md  SECURITY.md  phase10_ultra_summary.json  phase5_hardy_alignment.py  phase6_closures.csv  phase6_sigma_results.json  phase7_closures.csv  phase7_offline_test.json  phase8_closures.csv  phase8_sigma_results.json  phase8_ultra_closures.csv  phase8_ultra_results.json  phase8_zero_metrics.json  phase9_summary.json  phase9_tvals_off.csv  phase9_tvals_sigma05.csv  phase9_ultra_summary (1).json  plusORminus.md  pyproject.toml
ARPCompression_Adapter/: README_ADAPTER.md  arp_adapter.py
Accepted_Proof_Release_Pack/: README_RELEASE.md  prize_checklist.md
adaptive_pi_rh_preprint_v2_lite/: adaptive_pi_rh_preprint_v2.tex
docs/: IMO-translation-guide.md  README_PHASE9.md  SOLVED_IMPLEMENTATION_PACK.md  SPEC.md  advanced-primitives.md  inversion.md
examples/: example1_orthocenter_reflection_pi_a.py  example2_ceva_trig_pia.py  example3_gauss_bonnet_triangle.py
paper_arxiv/: main.tex  references.bib
phase2p5_rh_simulator/: README_PHASE2P5.md
press_kit/: slides_outline.md  talking_points.md
scripts/: run_phase10_m1.sh  run_phase8_m1.sh  run_phase9_m1.sh  validate_metrics.py
tests/: test_ceva_menelaus_pia.py  test_ceva_trig_pia.py  test_cyclic_quad_pia.py  test_cyclicity_balance.py  test_flat_limit.py  test_geodesic_prime_lockin.py  test_menelaus_pia.py  test_miquel_pia.py  test_ninepoint_pia.py  test_projective_pia.py  (+2 more)
(+48 files in other folders)
